--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <head>
-<title>Sarah Turkson</title>
+<title>Sarah T</title>
 </head>
 <body>
 <h1>To the cutest girl I know</h1>
 <p>You are very dear to me and I want us to stop arguing okay...</p>
 </body>
+
 </html>
